<resources>
    <string name="app_name">Food Application Android Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menuMain">Menu</string>
    <string name="menuProfile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loginTitle">Login page</string>
    <string name="firstNameLabel">First name:</string>
    <string name="firstName">Write your first name</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="lastName">Write your last name</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>

    <string name="registerTitle">Register page</string>
    <string name="emailLabel">Email:</string>
    <string name="email">Write your email</string>
    <string name="usernameLabel">Username:</string>
    <string name="username">Write your username</string>
    <string name="phoneLabel">Telephone:</string>
    <string name="phone">Write your number</string>
    <string name="passwordLabel">Password:</string>
    <string name="password">Your password</string>
    <string name="showPassword">Show password</string>

    <string name="profileTitle">Profile page</string>
    <string name="profileNameLabel">Name:</string>
    <string name="profileName">Your name</string>
    <string name="profilePhone">Your number</string>
    <string name="profilePhoneLabel">Telephone:</string>
    <string name="profileEmailLabel">Email:</string>
    <string name="profileEmail">Your email</string>
    <string name="profileUsernameLabel">Username:</string>
    <string name="profileUsername">Your username</string>

    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="restaurant_price">Restaurant price</string>

    <string name="detailTitle">Details page</string>
    <string name="detailName">Name:</string>
    <string name="detailRestaurantName">Restaurant name</string>
    <string name="detailAddress">Address:</string>
    <string name="detailRestaurantAddress">Address place</string>
    <string name="detailPostal">P.code:</string>
    <string name="detailRestaurantPostal">Postal code</string>
    <string name="detailCity">City:</string>
    <string name="detailRestaurantCity">City name</string>
    <string name="detailState">State:</string>
    <string name="detailRestaurantState">State name</string>
    <string name="detailArea">Area:</string>
    <string name="detailRestaurantArea">Area name</string>
    <string name="detailCountry">Country:</string>
    <string name="detailRestaurantCountry">Country name</string>
    <string name="detailPhone">Phone:</string>
    <string name="detailRestaurantPhone">Phone number</string>
    <string name="call">Call number</string>


    <string name="search">Search</string>
    <string name="city">Write a city…</string>

    <string name="profileRestaurants">Your restaurants: </string>
</resources>