<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:gravity="center_horizontal"
            android:text="@string/registerTitle"
            android:textColor="@color/purple_700"
            android:textSize="38sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerFirstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/firstNameLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/firstName"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerLastNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/lastNameLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/lastName"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/emailLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerUsernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/usernameLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerPhoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/phoneLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/passwordLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/showPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/showPassword"
            />
        <Button
            android:id="@+id/registerPageRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginLeft="80dp"
            android:backgroundTint="@color/black"
            android:text="@string/registerButtonText"
            android:textColor="@color/white"/>
    </LinearLayout>
    </ScrollView>

</layout>