<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:gravity="center_horizontal"
            android:text="@string/profileTitle"
            android:textColor="@color/purple_700"
            android:textSize="38sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/profileNameLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:text="@string/profileName"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profilePhoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/profilePhoneLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:text="@string/profilePhone"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileEmailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/profileEmailLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:text="@string/profileEmail"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profileUsernameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.5"
                android:text="@string/profileUsernameLabel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.3"
                android:text="@string/profileUsername"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <TextView
            android:id="@+id/profileRestaurantsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/profileRestaurants"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/profileRestaurants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    </ScrollView>

</layout>