<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:text="@string/restaurant_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/favourite_button"
            app:layout_constraintLeft_toRightOf="@id/restaurant_image"
            app:layout_constraintBottom_toTopOf="@id/restaurant_address"
            app:layout_constraintHorizontal_bias="0.2" />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_address"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            app:layout_constraintLeft_toLeftOf="@id/restaurant_name"
            app:layout_constraintBottom_toTopOf="@id/restaurant_price"/>

        <TextView
            android:id="@+id/restaurant_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_price"
            app:layout_constraintTop_toBottomOf="@id/restaurant_address"
            app:layout_constraintLeft_toLeftOf="@id/restaurant_address"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/btn_star_big_off"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/restaurant_name"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>